Resetup gh-pages again

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://razex0lol.github.io/shopForTeachReact2/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
