--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
-    "typescript": "^3.2.1",
+    "typescript": "4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
