--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "babel-jest": "^29.7.0",
     "ts-jest": "^29.1.2"
   }
