--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
-    "axios": "^1.6.8",
-    "axios-mock-adapter": "^1.22.0",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
-    "typescript": "^3.2.1",
+    "typescript": "4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +49,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "babel-jest": "^29.7.0",
     "ts-jest": "^29.1.2"
   }
