--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Build
       run: npm run build
 
+    - name: Run tests
+      run: npm test
+
     - name: Deploy
       run: |
         git config --global user.name $user_name
